[package]
edition = "2021"
name = "tvm_assembler"
version = "2.0.0"

[dependencies]
clap = { features = ["derive"], version = "4.4.18" }
hex = "0.4.3"
log = "0.4.20"
num = "0.4.1"
num-traits = "0.2.17"
serde = { features = ["derive"], version = "1.0.196" }
serde_json = "1.0.113"
tvm_types = { git = "https://github.com/tvmlabs/tvm-types", tag = "3.0.1" }
tvm_vm = { git = "https://github.com/tvmlabs/tvm-vm", tag = "2.0.0" }

[features]
gosh = []
groth = []
